--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-link": "^2.2.30",
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.2.39",
+    "gatsby-plugin-netlify-cms": "^4.2.0",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
@@ -20,6 +21,7 @@
     "gatsby-transformer-sharp": "^2.3.13",
     "intl": "^1.2.5",
     "materialize-css": "^1.0.0",
+    "netlify-cms-app": "^2.11.32",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
