--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "version": "0.1.0",
   "author": "Like Water Design, LLC <likewaterdesignco@gmail.com>",
   "dependencies": {
+    "@reach/dialog": "^0.9.1",
+    "@reach/tabs": "^0.9.1",
+    "@reach/visually-hidden": "^0.9.0",
     "classnames": "^2.2.6",
     "gatsby": "^2.19.7",
     "gatsby-background-image": "^0.10.2",
@@ -13,11 +16,13 @@
     "gatsby-plugin-intl": "^0.3.3",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-netlify-cms": "^4.2.0",
+    "gatsby-plugin-netlify-identity": "0.0.3",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-source-filesystem": "^2.2.1",
+    "gatsby-transformer-remark": "^2.7.0",
     "gatsby-transformer-sharp": "^2.3.13",
     "intl": "^1.2.5",
     "materialize-css": "^1.0.0",
@@ -27,7 +32,8 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-intl": "^4.1.1",
-    "react-materialize": "^3.5.9"
+    "react-materialize": "^3.5.9",
+    "react-netlify-identity-widget": "^0.2.7"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
