content/about/2020-03-24-map-description-en-abigail’s-driving-school-was-started-in-2012-by-two-virginia-commonwealth-university-students-after-both-received-traffic-infractions-they-had-to-attend-a-court-mandated-driver-improvement-class-during-this-class-they-notice.md

--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,5 @@ yarn-error.log
 .yarn-integrity
 
 static/
+
+content/about/2020-03-24-map-description-en-abigail’s-driving-school-was-started-in-2012-by-two-virginia-commonwealth-university-students-after-both-received-traffic-infractions-they-had-to-attend-a-court-mandated-driver-improvement-class-during-this-class-they-notice.md
