--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,7 +9,7 @@ collections:
   - name: "Home"
     label: "Home"
     folder: "content/home"
-    create: false
+    create: true
     default: 1
     delete: false
     max: 1
@@ -34,7 +34,7 @@ collections:
     folder: "content/about"
     default: 1
     max: 1
-    delete: false
+    delete: true
     create: false
     slug: "{{year}}-{{month}}-{{day}}-{{seconds}}"
     editor:
@@ -55,7 +55,7 @@ collections:
   - name: "Course"
     label: "Course"
     folder: "content/courses"
-    create: false
+    create: true
     delete: false
     slug: "{{year}}-{{month}}-{{day}}-{{seconds}}"
     editor:
