--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -35,7 +35,7 @@ collections:
     default: 1
     max: 1
     delete: true
-    create: false
+    create: true
     slug: "{{year}}-{{month}}-{{day}}-{{seconds}}"
     editor:
       preview: false
