--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.3.13",
     "intl": "^1.2.5",
-    "materialize-css": "^1.0.0",
+    "jquery": "^3.4.1",
+    "materialize-css": "^1.0.0-rc.2",
     "netlify-cms-app": "^2.11.32",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
