--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -76,29 +76,26 @@ collections:
           widget: "markdown",
           class: "es",
         }
-  - label: "Blog in English"
-    name: "english_posts"
+  - name: "Courses"
+    label: "Courses"
     folder: "content/courses"
-    filter: { field: "language", value: "en" }
+    default: 1
+    delete: true
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{title}}"
+    editor:
+      preview: false
     fields:
       - {
-          label: "Language",
-          name: "language",
-          widget: "select",
-          options: ["en", "es"],
+          label: "Title",
+          name: "title",
+          widget: "string",
+          hint: "title of node",
         }
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Content", name: "body", widget: "markdown" }
-  - label: "Blog en Español"
-    name: "spanish_posts"
-    folder: "content/courses"
-    filter: { field: "language", value: "es" }
-    fields:
+      - { label: "description-en", name: "body", widget: "markdown" }
       - {
-          label: "Lenguaje",
-          name: "language",
-          widget: "select",
-          options: ["en", "es"],
+          label: "description-es",
+          name: "body",
+          widget: "markdown",
+          class: "es",
         }
-      - { label: "Titulo", name: "title", widget: "string" }
-      - { label: "Contenido", name: "body", widget: "markdown" }
