--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "react-intl": "^4.1.1",
     "react-materialize": "^3.5.9",
     "react-netlify-identity-widget": "^0.2.7",
+    "react-slick": "^0.25.2",
     "rehype-document": "^4.0.0",
     "rehype-format": "^3.0.1",
     "rehype-stringify": "^6.0.1",
     "remark-parse": "^7.0.2",
     "remark-rehype": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "to-vfile": "^6.1.0",
     "unified": "^8.4.2",
     "vfile-reporter": "^6.0.1"
